--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  background-color: rgb(166, 235, 212);
 }
 
 h1 {
@@ -21,6 +22,7 @@ h1 {
 .container {
   max-width: 940px;
   margin: 0 auto;
+  font-family: 'Inconsolata', monospace;
 }
 
 .coutry-search {
@@ -28,5 +30,79 @@ h1 {
   padding: 10px 20px 3px 10px;
   border: none;
   border-bottom: 3px solid rgb(0, 0, 0);
-  font-size: 16px;
+  font-size: 20px;
+  outline: none;
+  background-color: transparent;
 }
+
+.coutry-search::placeholder {
+  color: rgb(0, 0, 0);
+}
+
+/*COUNTRY-LIST*/
+
+.coutries-list,
+.content-box-list {
+  margin: 0;
+  padding: 15px 0 0 0;
+  list-style: none;
+}
+
+.coutries-list__item {
+  padding: 5px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+
+/*COUNTRY-CONTENT*/
+
+.country-content {
+  color: rgb(78, 64, 64);
+}
+
+.country-content__title {
+  margin: 0;
+  padding: 50px 0;
+  text-align: center;
+  font-size: 56px;
+}
+
+.country-content-box {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+  grid-auto-rows: 360px;
+  grid-gap: 12px;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  color: rgb(78, 64, 64);
+}
+
+.content-box-left__capital,
+.content-box-left__population,
+.content-box-left__langueges {
+  margin: 0;
+  padding: 20px 0;
+  font-size: 28px;
+}
+
+.content-box-left__capital > span,
+.content-box-left__population > span,
+.content-box-left__langueges {
+  font-weight: 700;
+}
+
+
+.content-box-list__item {
+  padding-left: 20px;
+  font-size: 22px;
+}
+
+.content-box-right__image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+/*   ukr   */
